# ag-enforcement-tracker

./: .gitignore  DEFERRED.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: defendant_blocklist.yaml  entities.yaml  states.yaml  taxonomy.yaml
data/processed/: ag_tracker_brief.md  demo_insights.md  entity_resolution_verification.md  insights_report.md  methodology_onepager.html
scripts/: __init__.py  analyze.py  backfill.py  bulk_extract.py  bulk_scrape.py  curate_demo_sample.py  export.py  export_clean.py  rescrape_details.py  seed_from_fixtures.py  wayback_scrape.py
src/: cli.py
src/api/: routes.py  server.py
src/dashboard/: app.py
src/extractors/: filter.py  llm_fallback.py  patterns.py  press_release.py
src/normalization/: entities.py
src/scrapers/: base.py  registry.py
src/scrapers/states/: __init__.py  california.py  new_york.py  ohio.py  oregon.py  pennsylvania.py  texas.py  virginia.py
src/storage/: database.py  migrations.py  models.py
src/validation/: dedup.py  schemas.py
tests/: conftest.py
tests/fixtures/california/: detail_000_settlement_dollar.html  detail_001_injunctive_only.html  detail_002_multistate.html  detail_003_multiple_defendants.html  detail_004_statute_citation.html  (+11 more)
tests/test_api/: test_routes.py
tests/test_extractors/: test_filter.py  test_patterns.py  test_press_release.py
tests/test_normalization/: test_entities.py
tests/test_scrapers/: test_california.py  test_multistate.py
tests/test_storage/: test_database.py
tests/test_validation/: test_dedup.py  test_schemas.py
(+27 files in other folders)
